cmake_minimum_required(VERSION 3.10)

project(net)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -Wextra -Wpedantic -Werror")

file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/client/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/server/*.cpp)
file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/client/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/server/*.hpp)

message("SOURCES = ${SOURCES}")
message("HEADERS = ${HEADERS}")

add_library(${PROJECT_NAME} ${SOURCES} ${HEADERS})

#set(NET_LIB ${PROJECT_NAME} PARENT_SCOPE)
#set(NET_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

set(NET_LIB ${PROJECT_NAME})
set(NET_LIB ${NET_LIB} PARENT_SCOPE)
set(NET_INCLUDE_DIRS ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/client ${CMAKE_CURRENT_SOURCE_DIR}/server)
set(NET_INCLUDE_DIRS ${NET_INCLUDE_DIRS} PARENT_SCOPE)
